--- a/index.html
+++ b/index.html
@@ -3,32 +3,58 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
+    <style>
+    a {
+      color: red;
+    }
+    li {
+      border: 1px solid gray;
+    }
+    li a {
+      color: blue;
+    }
+    #exec-bio {
+      background-color: lightgray;
+    }
+    .bio-box {
+      border: 1px solid black;
+    }
+    .bio-box a {
+      color: green;
+    }
+    #my-test-id {
+      background-color: orange;
+    }
+    .my-test-class {
+      background-color: azure;
+    }
+    </style>
   </head>
   <body>
     <h1>I'm an h1</h1>
     <ul>
-      <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+      <li id="my-test-id">
+        <a href="http://example.com/">Link</a>
       </li>
       <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
       <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div id="exec-bio" class="bio-box my-test-class">
+      <a href="http://example.com/">I'm a link 1</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box my-test-class">
+      <a href="http://example.com/">I'm a link 2</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box my-test-class">
+      <a href="http://example.com/">I'm a link 3</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box my-test-class">
+      <a href="http://example.com/">I'm a link 4</a>
     </div>
   </body>
 </html>
